force-app/main/default/objects/PWChrono_Leave_Block_Date__c/PWChrono_Leave_Block_Date__c.object-meta.xml
<CustomObject>
    <description
  >Dates where leave applications are blocked (e.g. month-end close, critical project deadlines).</description>
    <label>Leave Block Date</label>
    <nameField>
        <displayFormat>BLK-{00000}</displayFormat>
        <label>Block Date Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Leave Block Dates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>