force-app/main/default/objects/PWChrono_Leave_Block_Date__c/fields/Allow_Exceptions__c.field-meta.xml
<CustomField>
    <fullName>Allow_Exceptions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Exceptions</label>
    <type>Checkbox</type>
</CustomField>