force-app/main/default/objects/PWChrono_Leave_Block_Date__c/fields/Block_Date__c.field-meta.xml
<CustomField>
    <fullName>Block_Date__c</fullName>
    <label>Block Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>