force-app/main/default/objects/PWChrono_Leave_Block_Date__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Department</label>
    <referenceTo>PWChrono_Department__c</referenceTo>
    <relationshipLabel>Leave Block Dates</relationshipLabel>
    <relationshipName>Leave_Block_Dates</relationshipName>
    <type>Lookup</type>
</CustomField>